fix spacing and overflow

--- a/src/css/components/bar.component.pcss
+++ b/src/css/components/bar.component.pcss
@@ -23,7 +23,7 @@
 #accessabar .underbar {
     grid-area: underbar;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 6fr 1fr;
     grid-template-areas: "hide-button prompt filler";
     width: 100%;
 }
