--- a/src/css/components/tts_prompt.pcss
+++ b/src/css/components/tts_prompt.pcss
@@ -15,7 +15,7 @@
         display: flex;
         align-items: center;
         pointer-events: none;
-        overflow-y: hidden;
+        overflow: hidden;
         word-spacing: 0.25em;
     }
 
